// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs should render 1 crumb 1`] = `
<div>
  <div
    aria-label="Breadcrumb"
    class="flex"
  >
    <ol
      class="inline-flex flex-wrap items-start space-x-1 md:space-x-2 rtl:space-x-reverse"
    >
      <li
        class="inline-flex items-center"
      >
        <a
          class="transition-colors duration-500 text-pink-500 hover:text-pink-400 inline-flex items-center text-sm font-medium"
          href="/"
        >
          <svg
            class="w-3 h-3 me-1 text-pink-500"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 576 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M543.8 287.6c17 0 32-14 32-32.1c1-9-3-17-11-24L512 185V64c0-17.7-14.3-32-32-32H448c-17.7 0-32 14.3-32 32v36.7L309.5 7c-6-5-14-7-21-7s-15 1-22 8L10 231.5c-7 7-10 15-10 24c0 18 14 32.1 32 32.1h32v69.7c-.1 .9-.1 1.8-.1 2.8V472c0 22.1 17.9 40 40 40h16c1.2 0 2.4-.1 3.6-.2c1.5 .1 3 .2 4.5 .2H160h24c22.1 0 40-17.9 40-40V448 384c0-17.7 14.3-32 32-32h64c17.7 0 32 14.3 32 32v64 24c0 22.1 17.9 40 40 40h24 32.5c1.4 0 2.8 0 4.2-.1c1.1 .1 2.2 .1 3.3 .1h16c22.1 0 40-17.9 40-40V455.8c.3-2.6 .5-5.3 .5-8.1l-.7-160.2h32z"
            />
          </svg>
          Home
        </a>
      </li>
      <li
        class="inline-flex items-center me-1"
      >
        <svg
          class="me-1 w-3 h-3 text-pink-500"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 320 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"
          />
        </svg>
        <span
          class="text-sm font-medium text-purple-500"
        >
          test1
        </span>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Breadcrumbs should render 2 crumb 1`] = `
<div>
  <div
    aria-label="Breadcrumb"
    class="flex"
  >
    <ol
      class="inline-flex flex-wrap items-start space-x-1 md:space-x-2 rtl:space-x-reverse"
    >
      <li
        class="inline-flex items-center"
      >
        <a
          class="transition-colors duration-500 text-pink-500 hover:text-pink-400 inline-flex items-center text-sm font-medium"
          href="/"
        >
          <svg
            class="w-3 h-3 me-1 text-pink-500"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 576 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M543.8 287.6c17 0 32-14 32-32.1c1-9-3-17-11-24L512 185V64c0-17.7-14.3-32-32-32H448c-17.7 0-32 14.3-32 32v36.7L309.5 7c-6-5-14-7-21-7s-15 1-22 8L10 231.5c-7 7-10 15-10 24c0 18 14 32.1 32 32.1h32v69.7c-.1 .9-.1 1.8-.1 2.8V472c0 22.1 17.9 40 40 40h16c1.2 0 2.4-.1 3.6-.2c1.5 .1 3 .2 4.5 .2H160h24c22.1 0 40-17.9 40-40V448 384c0-17.7 14.3-32 32-32h64c17.7 0 32 14.3 32 32v64 24c0 22.1 17.9 40 40 40h24 32.5c1.4 0 2.8 0 4.2-.1c1.1 .1 2.2 .1 3.3 .1h16c22.1 0 40-17.9 40-40V455.8c.3-2.6 .5-5.3 .5-8.1l-.7-160.2h32z"
            />
          </svg>
          Home
        </a>
      </li>
      <li
        class="inline-flex items-center me-1"
      >
        <svg
          class="me-1 w-3 h-3 text-pink-500"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 320 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"
          />
        </svg>
        <a
          class="transition-colors duration-500 text-pink-500 hover:text-pink-400 text-sm font-medium"
          href="#test1"
        >
          test1
        </a>
      </li>
      <li
        class="inline-flex items-center me-1"
      >
        <svg
          class="me-1 w-3 h-3 text-pink-500"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 320 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"
          />
        </svg>
        <span
          class="text-sm font-medium text-purple-500"
        >
          test2
        </span>
      </li>
    </ol>
  </div>
</div>
`;
